xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__fn_root_explicit.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#,\n    \"fn:root(doc/a) / doc / b / fn:local-name()\")"
---
Sequence(
    RefCell {
        value: Sequence {
            items: [
                Atomic(
                    String(
                        "b",
                    ),
                ),
            ],
        },
    },
)
