xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__fn_string.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><p>Hello world!</p></doc>\"#, \"/doc/p/string()\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        String(
                            "Hello world!",
                        ),
                    ),
                ],
            },
        },
    ),
)
