xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__function_closure.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"function() { let $x := 3 return function() { $x + 2 } }()()\")"
---
Ok(
    Atomic(
        Integer(
            5,
        ),
    ),
)
