xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__function_closure_nested.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"function() { let $x := 3 return function() { let $y := 4 return function() { $x + $y }} }()()()\")"
---
Atomic(
    Integer(
        7,
    ),
)
