xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__function_closure_with_multiple_variables.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"function() { let $x := 3, $y := 1 return function() { $x - $y } }()()\")"
---
Atomic(
    Integer(
        2,
    ),
)
