xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__function_closure_with_multiple_variables_arguments.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"function() { let $x := 3 return function($y) { $x - $y } }()(1)\")"
---
Atomic(
    Integer(
        2,
    ),
)
