xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__function_nested.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"function($x) { function($y) { $y + 2 }($x + 1) } (5)\")"
---
Ok(
    Atomic(
        Integer(
            8,
        ),
    ),
)
