xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__generate_id.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b/><c/></doc>\"#, \"generate-id(doc/a)\")"
---
Ok(
    Atomic(
        String(
            "id_0_2",
        ),
    ),
)
